--- a/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
+++ b/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">	
-                <h2 class="st_title"><i class="uil uil-swatchbook"></i> Add New Chapter</h2>
+                <h2 class="st_title"><i class="uil uil-swatchbook"></i> {{"Add New Chapter" | translate}}</h2>
             </div>					
         </div>	
         <div class="step-tab-panel step-tab-location" id="tab_step3">
