--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -32,11 +32,11 @@
             <div class="row">
                 <div class="col-12">
                     <h4 class="item_title">{{'Newest Courses' | translate}}</h4>
-                    <a href="#" class="see150">{{'See all' | translate}}</a>
+                    <a  class="see150">{{'See all' | translate}}</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="fcrse_1 mb-20">
-                        <a href="course_detail_view.html" class="fcrse_img">
+                        <a  class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
@@ -46,10 +46,10 @@
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a href="#" class="crse-cate">English</a>
+                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a  class="crse-cate">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
                                 <div class="prce142">$4 </div>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="fcrse_1 mb-20">
-                        <a href="course_detail_view.html" class="fcrse_img">
+                        <a  class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
@@ -67,10 +67,10 @@
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a href="#" class="crse-cate">English</a>
+                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a  class="crse-cate">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
                                 <div class="prce142">$4 </div>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="fcrse_1 mb-20">
-                        <a href="course_detail_view.html" class="fcrse_img">
+                        <a  class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
@@ -88,10 +88,10 @@
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a href="#" class="crse-cate">English</a>
+                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a  class="crse-cate">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
                                 <div class="prce142">$4 </div>
                             </div>
                         </div>
@@ -102,11 +102,11 @@
             <div class="row">
                 <div class="col-12">
                     <h4 class="item_title">{{'Another Courses' | translate}}</h4>
-                    <a href="#" class="see150">{{'See all' | translate}}</a>
+                    <a  class="see150">{{'See all' | translate}}</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="fcrse_1 mb-20">
-                        <a href="course_detail_view.html" class="fcrse_img">
+                        <a  class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
@@ -116,10 +116,10 @@
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a href="#" class="crse-cate">English</a>
+                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a  class="crse-cate">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
                                 <div class="prce142">$4 </div>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="fcrse_1 mb-20">
-                        <a href="course_detail_view.html" class="fcrse_img">
+                        <a  class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
@@ -137,10 +137,10 @@
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a href="#" class="crse-cate">English</a>
+                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a  class="crse-cate">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
                                 <div class="prce142">$4 </div>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="fcrse_1 mb-20">
-                        <a href="course_detail_view.html" class="fcrse_img">
+                        <a  class="fcrse_img">
                             <img src="assets/images/courses/img-14.jpg" alt="">
                             <div class="course-overlay">
                                 <span class="play_btn1"><i class="uil uil-play"></i></span>
@@ -158,10 +158,10 @@
                             </div>
                         </a>
                         <div class="fcrse_content">
-                            <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
-                            <a href="#" class="crse-cate">English</a>
+                            <a  class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3 </a>
+                            <a  class="crse-cate">English</a>
                             <div class="auth1lnkprce">
-                                <p class="cr1fot">{{'By' | translate}} <a href="#">John Doe </a></p>
+                                <p class="cr1fot">{{'By' | translate}} <a >John Doe </a></p>
                                 <div class="prce142">$4 </div>
                             </div>
                         </div>
