--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -14,7 +14,7 @@
 <!-- Left Sidebar Start -->
 <nav class="vertical_nav chapter-list">
     <div class="left_section menu_left" id="js-menu">
-        <h4 class=header>table of content <span class="right">2h :20m</span></h4>
+        <h4 class=header>{{"table of content " | translate}}<span class="right">2h :20m</span></h4>
         <div class="left_section">
             <ul>
                 <li class="menu--item  menu--item__has_sub_menu">
@@ -25,19 +25,19 @@
                     </label>
                     <ul class="sub_menu">
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                     </ul>
@@ -50,19 +50,19 @@
                     </label>
                     <ul class="sub_menu">
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                     </ul>
@@ -75,19 +75,19 @@
                     </label>
                     <ul class="sub_menu">
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                         <li class="sub_menu--item">
-                            <a href="certification_center.html" class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
+                            <a  class="sub_menu--link">Etiam eu nibh vehicula, rhoncus
                                 lectus eget, gravida elit. <span>4h 30m</span></a>
                         </li>
                     </ul>
