--- a/src/app/pages/admin/admin-instructors-list/admin-instructors-list.component.html
+++ b/src/app/pages/admin/admin-instructors-list/admin-instructors-list.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="st_title"><i class="uil uil-book-alt"></i>Instractors Request List</h2>
+                <h2 class="st_title"><i class="uil uil-book-alt"></i>{{"Instractors Request List" | translate}}</h2>
             </div>
         </div>
         <div class="row" infiniteScroll [infiniteScrollDistance]="1" (scrolled)="onScroll()"
@@ -12,12 +12,12 @@
                     <table class="table ucp-table">
                         <thead class="thead-s">
                             <tr>
-                                <th class="text-center" scope="col"> No.</th>
-                                <th>Instractor Name</th>
-                                <th class="text-center" scope="col">Phone No</th>
-                                <th class="text-center" scope="col">Email</th>
-                                <th class="text-center" scope="col">Status</th>
-                                <th class="text-center" scope="col">Action</th>
+                                <th class="text-center" scope="col"> {{"No." | translate}}</th>
+                                <th>{{"Instractor Name" | translate}}</th>
+                                <th class="text-center" scope="col">{{"Phone No" | translate}}</th>
+                                <th class="text-center" scope="col">{{"Email" | translate}}</th>
+                                <th class="text-center" scope="col">{{"Status" | translate}}</th>
+                                <th class="text-center" scope="col">{{"Action" | translate}}</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -30,9 +30,9 @@
                                 <td class="text-center" *ngIf="!instructor.enabled">{{'Pending' | translate}}</td>
                                 <td class="text-center">
                                     <a (click)="onApproveClick(instructor)" title="Accept" class="accept-btn mx-2" *ngIf="!instructor.enabled"><i
-                                            class="uil uil-user-check"></i> Accept</a>
+                                            class="uil uil-user-check"></i> {{"Accept" | translate}}</a>
                                     <a (click)="onRejectClick(instructor)" title="Reject" class="reject-btn  mx-2" *ngIf="instructor.enabled"><i
-                                            class="uil uil-user-times"></i> Reject</a>
+                                            class="uil uil-user-times"></i> {{"Reject" | translate}}</a>
                                 </td>
                             </tr>
 
