--- a/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
+++ b/src/app/pages/instructor/instructor-dashboard/instructor-dashboard.component.html
@@ -4,14 +4,14 @@
 			<div class="container-fluid">			
 				<div class="row">
 					<div class="col-lg-12">	
-						<h2 class="st_title"><i class="uil uil-apps"></i> Instructor Dashboard</h2>
+						<h2 class="st_title"><i class="uil uil-apps"></i> {{"Instructor Dashboard" | translate}}</h2>
 					</div>
 					<div class="col-md-6 col-lg-6 col-xl-4 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
-								<h5>Total Courses</h5>
+								<h5>{{"Total Courses" | translate}}</h5>
 								<h2>130</h2>
-								<span class="crdbg_3">New 5</span>
+								<span class="crdbg_3">{{"New" | translate}} 5</span>
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/online-course.svg" alt="">
@@ -21,9 +21,9 @@
 					<div class="col-md-6 col-lg-6 col-xl-4 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
-								<h5>Total Sales</h5>
+								<h5>{{"Total Sales" | translate}}</h5>
 								<h2>$350</h2>
-								<span class="crdbg_1">New 50</span>
+								<span class="crdbg_1">{{"New" | translate}} 50</span>
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/achievement.svg" alt="">
@@ -33,9 +33,9 @@
 					<div class="col-md-6 col-lg-6 col-xl-4 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
-								<h5>Total Students</h5>
+								<h5>{{"Total Students" | translate}}</h5>
 								<h2>2650</h2>
-								<span class="crdbg_4">New 245</span>
+								<span class="crdbg_4">{{"New" | translate}} 245</span>
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/knowledge.svg" alt="">
@@ -45,7 +45,7 @@
 					<div class="col-md-6 col-lg-6 col-xl-6 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
-								<h5>Active Course</h5>
+								<h5>{{"Active Course" | translate}}</h5>
 								<h2>1500</h2>
 								<span class="crdbg_2">New 125</span>
 							</div>
@@ -57,9 +57,9 @@
 					<div class="col-md-6 col-lg-6 col-xl-6 col-bg">
 						<div class="card_dash">
 							<div class="card_dash_left">
-								<h5>Pending Course</h5>
+								<h5>{{"Pending Course" | translate}}</h5>
 								<h2>500</h2>
-								<span class="crdbg_2">New 125</span>
+								<span class="crdbg_2">{{"New" | translate}} 125</span>
 							</div>
 							<div class="card_dash_right">
 								<img src="assets/images/dashboard/pending.svg" alt="">
