--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -3,8 +3,8 @@
     <div class="row justify-content-lg-center justify-content-md-center">
         <div class="col-lg-12">
             <div class="main_logo25" id="logo">
-                <a href="index.html"><img src="assets/images/main-logo.png" alt=""></a>
-                <a href="index.html"><img class="logo-inverse" src="assets/images/logo.png" alt=""></a>
+                <a ><img src="assets/images/main-logo.png" alt=""></a>
+                <a ><img class="logo-inverse" src="assets/images/logo.png" alt=""></a>
             </div>
         </div>
 
