--- a/src/app/pages/user/components/user-footer/user-footer.component.html
+++ b/src/app/pages/user/components/user-footer/user-footer.component.html
@@ -3,9 +3,9 @@
         <div class="row">					
             <div class="col-lg-12">
                 <div class="item_f1">
-                    <a href="terms_of_use.html">Copyright Policy</a>
-                    <a href="terms_of_use.html">Terms</a>
-                    <a href="terms_of_use.html">Privacy Policy</a>
+                    <a >{{"Copyright Policy" | translate}}</a>
+                    <a >{{"Terms" | translate}}</a>
+                    <a >{{"Privacy Policy" | translate}}</a>
                 </div>
             </div>
             <div class="col-lg-12">
@@ -15,17 +15,17 @@
                             <ul class="fotb_left">
                                 
                                 <li>
-                                    <p>© 2020 <strong>Smart Academy</strong>. All Rights Reserved.</p>
+                                    <p>© 2020 <strong>{{"Smart Academy" | translate}}</strong>{{". All Rights Reserved." | translate}}</p>
                                 </li>
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <div class="edu_social_links">
-                                <a href="#"><i class="uil uil-facebook-f"></i></a>
-                                <a href="#"><i class="uil uil-twitter"></i></a>
-                                <a href="#"><i class="uil uil-linkedin"></i></a>
-                                <a href="#"><i class="uil uil-instagram"></i></a>
-                                <a href="#"><i class="uil uil-youtube"></i></a>
+                                <a ><i class="uil uil-facebook-f"></i></a>
+                                <a ><i class="uil uil-twitter"></i></a>
+                                <a ><i class="uil uil-linkedin"></i></a>
+                                <a ><i class="uil uil-instagram"></i></a>
+                                <a ><i class="uil uil-youtube"></i></a>
                             </div>
                         </div>
                     </div>
