--- a/src/app/pages/user/components/user-header/user-header.component.html
+++ b/src/app/pages/user/components/user-header/user-header.component.html
@@ -8,8 +8,8 @@
 			<span class="collapse_menu--label"></span>
 		</button>
 		<div class="main_logo" id="logo">
-			<a href="index.html"><img src="assets/images/logo-inner.png" alt=""></a>
-			<a href="index.html"><img class="logo-inverse" src="assets/images/logo-inner.png" alt=""></a>
+			<a ><img src="assets/images/logo-inner.png" alt=""></a>
+			<a ><img class="logo-inverse" src="assets/images/logo-inner.png" alt=""></a>
 			<span>Smart Academy</span>
 		</div>
 		<div class="search120">
@@ -23,9 +23,9 @@
 		<div class="header_right">
 			<ul>
 				<li class="ui dropdown">
-					<a href="#" class="option_links"><i class='uil uil-envelope-alt'></i><span class="noti_count">3</span></a>
+					<a  class="option_links"><i class='uil uil-envelope-alt'></i><span class="noti_count">3</span></a>
 					<div class="menu dropdown_ms">
-						<a href="#" class="channel_my item">
+						<a  class="channel_my item">
 							<div class="profile_link">
 								<img src="assets/images/left-imgs/img-6.jpg" alt="">
 								<div class="pd_content">
@@ -35,7 +35,7 @@
 								</div>							
 							</div>							
 						</a>
-						<a href="#" class="channel_my item">
+						<a  class="channel_my item">
 							<div class="profile_link">
 								<img src="assets/images/left-imgs/img-5.jpg" alt="">
 								<div class="pd_content">
@@ -45,7 +45,7 @@
 								</div>							
 							</div>							
 						</a>
-						<a href="#" class="channel_my item">
+						<a  class="channel_my item">
 							<div class="profile_link">
 								<img src="assets/images/left-imgs/img-8.jpg" alt="">
 								<div class="pd_content">
@@ -59,9 +59,9 @@
 					</div>
 				</li>
 				<li class="ui dropdown">
-					<a href="#" class="option_links"><i class='uil uil-bell'></i><span class="noti_count">3</span></a>
+					<a  class="option_links"><i class='uil uil-bell'></i><span class="noti_count">3</span></a>
 					<div class="menu dropdown_mn">
-						<a href="#" class="channel_my item">
+						<a  class="channel_my item">
 							<div class="profile_link">
 								<img src="assets/images/left-imgs/img-1.jpg" alt="">
 								<div class="pd_content">
@@ -71,7 +71,7 @@
 								</div>							
 							</div>							
 						</a>
-						<a href="#" class="channel_my item">
+						<a  class="channel_my item">
 							<div class="profile_link">
 								<img src="assets/images/left-imgs/img-2.jpg" alt="">
 								<div class="pd_content">
@@ -81,7 +81,7 @@
 								</div>							
 							</div>							
 						</a>
-						<a href="#" class="channel_my item">
+						<a  class="channel_my item">
 							<div class="profile_link">
 								<img src="assets/images/left-imgs/img-9.jpg" alt="">
 								<div class="pd_content">
@@ -94,7 +94,7 @@
 					</div>
 				</li>
 				<li class="ui dropdown">
-					<a href="#" class="opts_account">
+					<a  class="opts_account">
 						<img src="assets/images/hd_dp.jpg" alt="">
 					</a>
 					<div class="menu dropdown_account">
@@ -114,7 +114,7 @@
 							<a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a>						
 						</div>
 						<div class="night_mode_switch__btn">
-							<a href="#" id="night-mode" class="btn-night-mode">
+							<a  id="night-mode" class="btn-night-mode">
 								<i class="uil uil-moon"></i> Night mode
 								<span class="btn-night-mode-switch">
 									<span class="uk-switch-button"></span>
